--- a/styles/index.css
+++ b/styles/index.css
@@ -84,7 +84,7 @@ body {
     align-items: center;
     color: white;
     height: 40px;
-    padding-top: 3px;
+    padding-top: 5px;
     position: fixed;
     bottom: 0;
     left: 0;
